# Amanuense

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
api/: main.py  runner.py
corpus/: registry.json
db/: legislacao.py  models.py  session.py
db/migrations/: env.py
db/sql/: 01_schema.sql  02_versionamento.sql  03_demo_lgpd.sql
docs/: especificacao-base-legislacao.md
frontend/: app.js  index.html  style.css
output/: corpus-texts.json  diff-log.json  graph-data.js  knowledge-graph.json  vigency-data.js  vigency-index.json
pipeline/: config.py  corpus_registry.py  run.py
pipeline/agents/: base.py  corpus_scanner.py  domain_analyzer.py  graph_reviewer.py  hierarchy_analyzer.py  implication_analyzer.py  legislation_loader.py  norm_analyzer.py  revocation_analyzer.py  tour_builder.py
pipeline/graph/: __init__.py  builder.py  exporter.py  legislacao_source.py  traversal.py  vigency.py
scripts/: check_vigency.py  extract_lei_planalto.py  parse_pdfs.py  run_pipeline.py  validate_graph.py
tests/: conftest.py  graph_contract.py  test_agent_output_schema.py  test_api.py  test_canonical_tree.py  test_corpus_registry.py  test_corpus_scanner.py  test_domain_analyzer.py  test_hierarchy_analyzer.py  test_id_canonico.py  test_incremental_pruning.py  test_legislation_loader.py  test_mcp_server.py  test_parsers.py  test_pipeline_run.py  test_planalto_extraction.py  test_revocation_analyzer.py  test_revocation_patterns.py  test_schemas.py  test_validacao_citacao.py
(+25 files in other folders)
